fix modal overflow

--- a/less/styles.less
+++ b/less/styles.less
@@ -146,7 +146,7 @@
         background-color: rgba(0, 0, 0, 0.3);
 
         &.active {
-            display: flex;
+            display: block;
         }
 
         #lpb-modal-content {
